textboxes hide/show depending on shape chosen from combo box

--- a/GrapeShapes/MainWindow.xaml
+++ b/GrapeShapes/MainWindow.xaml
@@ -1,12 +1,15 @@
 ﻿<Window x:Class="GrapeShapes.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid Margin="0,0,0,-4">
-        <Button Content="Create" HorizontalAlignment="Left" Margin="417,17,0,0" VerticalAlignment="Top" Width="75" Background="#FFDE3232"/>
-        <ComboBox HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="43,15,0,0" FontFamily="Segoe UI Semibold" Name="ShapeTypeComboBox" />
-            <TextBox HorizontalAlignment="Left" Height="23" Margin="188,15,0,0" TextWrapping="Wrap" Text="Shape Properties" VerticalAlignment="Top" Width="156" />
-        <Canvas HorizontalAlignment="Left" Height="250" Margin="42,53,0,-180" VerticalAlignment="Top" Width="450">
+        Title="MainWindow" Height="418.031" Width="709.252">
+    <Grid Margin="10,0,-8,-4">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="43*"/>
+            <RowDefinition Height="280*"/>
+        </Grid.RowDefinitions>
+        <Button Content="Create" HorizontalAlignment="Left" Margin="551,17,0,0" VerticalAlignment="Top" Width="75" Background="#FFDE3232"/>
+        <ComboBox HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="43,15,0,0" FontFamily="Segoe UI Semibold" Name="ShapeTypeComboBox" SelectionChanged="ShapeType_SelectionChanged"/>
+        <Canvas HorizontalAlignment="Left" Height="302" Margin="26,10,0,0" VerticalAlignment="Top" Width="625" Name="ShapeCanvas" Grid.Row="1">
             <Canvas.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFD4D2D2" Offset="0"/>
@@ -14,6 +17,8 @@
                 </LinearGradientBrush>
             </Canvas.Background>
         </Canvas>
-
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="179,17,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="84" Name="arg1"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="286,17,0,0" TextWrapping="Wrap" Text="2" VerticalAlignment="Top" Width="84" Name="arg2"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="388,17,0,0" TextWrapping="Wrap" Text="3" VerticalAlignment="Top" Width="82" Name="arg3" />
     </Grid>
 </Window>
